Add text and icons

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<header id="header" class="alt">
 						<span class="logo"><img src="assets/css/images/LogoÉAcoPngFullBranca.png" alt="" /></span>
 						<h1>É Aço</h1>
-						<p>Serviços e reparos em caldeiraria.</p>
+						<p>Serviços e Reparos em Caldeiraria.</p>
 					</header>
 
 				<!-- Nav -->
@@ -45,11 +45,9 @@
 										<header class="major">
 											<h2>Introdução</h2>
 										</header>
-										<p>Sed lorem ipsum dolor sit amet nullam consequat feugiat consequat magna
-										adipiscing magna etiam amet veroeros. Lorem ipsum dolor tempus sit cursus.
-										Tempus nisl et nullam lorem ipsum dolor sit amet aliquam.</p>
+										<p>A <strong style="font-style: oblique;font-weight: bold;">É Aço</strong> é uma empresa especializada em manutenção mecânica preventiva e corretiva que aplica as melhores práticas do mercado. Procuramos oferece a opção que melhor se adapta para cada perfil de cliente, visando sempre a <strong style="font-style: oblique; font-weight: bold;">Agilidade, Qualidade e Profissionalismo</strong></p>
 										<ul class="actions">
-											<li><a href="generic.html" class="button">Learn More</a></li>
+											<li><a href="#contatos" class="button">Saiba Mais</a></li>
 										</ul>
 									</div>
 									<span class="image"><img src="assets/css/images/male-worker-at-factory.jpg" alt="" /></span>
@@ -65,22 +63,22 @@
 									<li>
 										<span class="icon solid major style1 fa-bolt"></span>
 										<h3>Agilidade</h3>
-										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
+										<p>Um de nossos principais processos se baseia em resolver seus problemas de forma ágil para que suas atividades deem prosseguimento.</p>
 									</li>
 									<li>
 										<span class="icon major style3 fa-gem"></span>
 										<h3>Qualidade</h3>
-										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
+										<p>E claro, assim como a velocidade, fazer o trabalho bem feito é uma de nossas marcas.</p>
 									</li>
 									<li>
 										<span class="icon major style5 fa-copy"></span>
 										<h3>Profissionalismo</h3>
-										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
+										<p>Ética profissional é nosso sobrenome, prezamos continuamente por prática, seguranca e comunicacao com perícia.</p>
 									</li>
 								</ul>
 								<footer class="major">
 									<ul class="actions special">
-										<li><a href="generic.html" class="button">Learn More</a></li>
+										<li><a href="#contatos" class="button">Saiba Mais</a></li>
 									</ul>
 								</footer>
 							</section>
@@ -115,24 +113,17 @@
 									</li>
 								</ul>
 								<p class="content">Nam elementum nisl et mi a commodo porttitor. Morbi sit amet nisl eu arcu faucibus hendrerit vel a risus. Nam a orci mi, elementum ac arcu sit amet, fermentum pellentesque et purus. Integer maximus varius lorem, sed convallis diam accumsan sed. Etiam porttitor placerat sapien, sed eleifend a enim pulvinar faucibus semper quis ut arcu. Ut non nisl a mollis est efficitur vestibulum. Integer eget purus nec nulla mattis et accumsan ut magna libero. Morbi auctor iaculis porttitor. Sed ut magna ac risus et hendrerit scelerisque. Praesent eleifend lacus in lectus aliquam porta. Cras eu ornare dui curabitur lacinia.</p>
-								<footer class="major">
-									<ul class="actions special">
-										<li><a href="generic.html" class="button">Learn More</a></li>
-									</ul>
-								</footer>
 							</section>
 
 						<!-- Get Started -->
 							<section id="cta" class="main special">
 								<header class="major">
-									<h2>Contatos</h2>
-									<p>Donec imperdiet consequat consequat. Suspendisse feugiat congue<br />
-									posuere. Nulla massa urna, fermentum eget quam aliquet.</p>
+									<h2 id="contatos">Contatos</h2>
+									<p>Entre em contato conosco para fazer orçamento.</p>
 								</header>
 								<footer class="major">
 									<ul class="actions special">
-										<li><a href="generic.html" class="button primary">Get Started</a></li>
-										<li><a href="generic.html" class="button">Learn More</a></li>
+										<li><a href="https://api.whatsapp.com/send?phone=5581987957236" class="button primary">Fazer Orçamento</a></li>
 									</ul>
 								</footer>
 							</section>
@@ -142,31 +133,28 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<section>
-							<h2>Aliquam sed mauris</h2>
-							<p>Sed lorem ipsum dolor sit amet et nullam consequat feugiat consequat magna adipiscing tempus etiam dolore veroeros. eget dapibus mauris. Cras aliquet, nisl ut viverra sollicitudin, ligula erat egestas velit, vitae tincidunt odio.</p>
-							<ul class="actions">
-								<li><a href="generic.html" class="button">Learn More</a></li>
-							</ul>
+							<h2>Veja mais de nosso Servicos</h2>
+							<p>Estamos presentes em diversas redes sociais, com intuito de manter uma ótima comunicação com você, ao mesmo tempo que divulgamos a realização de nossas atividades. Para facilitar seu acesso, temos vídeo no Youtube, fotos no Instagram e Facebook e disponibilizamos nosso WhatsApp para sanar qualquer dúvida.</p>
+
 						</section>
 						<section>
-							<h2>Etiam feugiat</h2>
+							<h2>Informações da Empresa</h2>
 							<dl class="alt">
 								<dt>Address</dt>
 								<dd>1234 Somewhere Road &bull; Nashville, TN 00000 &bull; USA</dd>
-								<dt>Phone</dt>
-								<dd>(000) 000-0000 x 0000</dd>
+								<dt>Telefone</dt>
+								<dd>(81) 98795-7236</dd>
 								<dt>Email</dt>
-								<dd><a href="#">information@untitled.tld</a></dd>
+								<dd><a href="mailto:tecbrazrefrigeracaopmoc@gmail.com?">tecbrazrefrigeracaopmoc@gmail.com</a></dd>
 							</dl>
 							<ul class="icons">
-								<li><a href="mailto:tecbrazrefrigeracaopmoc@gmail.com?" class="icon brands fa-twitter alt"><span class="label">Email</span></a></li>
 								<li><a href="https://www.facebook.com/tecbrazrefrigeracaopmoc" target="_blank" class="icon brands fa-facebook-f alt"><span class="label">Facebook</span></a></li>
 								<li><a href="https://www.instagram.com/tecbrazrefrigeracaopmoc/" target="_blank" class="icon brands fa-instagram alt"><span class="label">Instagram</span></a></li>
-								<li><a href="https://api.whatsapp.com/send?phone=5581987957236" target="_blank" class="icon brands fa-github alt"><span class="label">WhatsApp</span></a></li>
-								<li><a href="https://www.youtube.com/channel/UCd1J6MlWJUKnz_11MavvV9w" target="_blank" class="icon brands fa-dribbble alt"><span class="label">Youtube</span></a></li>
+								<li><a href="https://api.whatsapp.com/send?phone=5581987957236" target="_blank" class="icon brands fa-whatsapp alt"><span class="label">WhatsApp</span></a></li>
+								<li><a href="https://www.youtube.com/channel/UCd1J6MlWJUKnz_11MavvV9w" target="_blank" class="icon brands fa-youtube alt"><span class="label">Youtube</span></a></li>
 							</ul>
 						</section>
-						<p class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+						<p class="copyright">&copy; 2021-2022 ÉAço.</p>
 					</footer>
 
 			</div>
