Alteracoes com o cliente

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<header id="header" class="alt">
 						<span class="logo"><img src="assets/css/images/LogoÉAcoPngFullBranca.png" alt="" /></span>
 						<h1>É Aço</h1>
-						<p>Serviços e Reparos em Caldeiraria.</p>
+						<p>Serviços e Reparos em Caldeiraria e Manutenção Mecânica.</p>
 					</header>
 
 				<!-- Nav -->
@@ -45,7 +45,7 @@
 										<header class="major">
 											<h2>Introdução</h2>
 										</header>
-										<p>A <strong style="font-style: oblique;font-weight: bold;">É Aço</strong> é uma empresa especializada em manutenção mecânica preventiva e corretiva que aplica as melhores práticas do mercado. Procuramos oferece a opção que melhor se adapta para cada perfil de cliente, visando sempre a <strong style="font-style: oblique; font-weight: bold;">Agilidade, Qualidade e Profissionalismo</strong></p>
+										<p>A <strong style="font-style: oblique;font-weight: bold;">É Aço</strong> é uma empresa especializada em manutenção mecânica preventiva e corretiva que aplica as melhores práticas do mercado. Procuramos oferece a melhor opção para cada perfil de cliente, visando sempre a <strong style="font-style: oblique; font-weight: bold;">Agilidade, Qualidade e Profissionalismo</strong></p>
 										<ul class="actions">
 											<li><a href="#contatos" class="button">Saiba Mais</a></li>
 										</ul>
@@ -123,7 +123,7 @@
 								</header>
 								<footer class="major">
 									<ul class="actions special">
-										<li><a href="https://api.whatsapp.com/send?phone=5581987957236" class="button primary">Fazer Orçamento</a></li>
+										<li><a href="https://api.whatsapp.com/send?phone=5581998989831" class="button primary">Fazer Orçamento</a></li>
 									</ul>
 								</footer>
 							</section>
@@ -150,7 +150,7 @@
 							<ul class="icons">
 								<li><a href="https://www.facebook.com/tecbrazrefrigeracaopmoc" target="_blank" class="icon brands fa-facebook-f alt"><span class="label">Facebook</span></a></li>
 								<li><a href="https://www.instagram.com/tecbrazrefrigeracaopmoc/" target="_blank" class="icon brands fa-instagram alt"><span class="label">Instagram</span></a></li>
-								<li><a href="https://api.whatsapp.com/send?phone=5581987957236" target="_blank" class="icon brands fa-whatsapp alt"><span class="label">WhatsApp</span></a></li>
+								<li><a href="https://api.whatsapp.com/send?phone=5581998989831" target="_blank" class="icon brands fa-whatsapp alt"><span class="label">WhatsApp</span></a></li>
 								<li><a href="https://www.youtube.com/channel/UCd1J6MlWJUKnz_11MavvV9w" target="_blank" class="icon brands fa-youtube alt"><span class="label">Youtube</span></a></li>
 							</ul>
 						</section>
