--- a/index.html
+++ b/index.html
@@ -90,11 +90,72 @@
 									<p>Donec imperdiet consequat consequat. Suspendisse feugiat congue<br />
 									posuere. Nulla massa urna, fermentum eget quam aliquet.</p>
 								</header>
-								<ul class="statistics">
+									<div class="conta">
+										<div class="card">
+											<div class="face face1">
+												<div class="conte">
+													<span class="icon solid fa-people-arrows"></span>
+													<h3>T1</h3>
+												</div>
+											</div>
+											<div class="face face2">
+												<div class="conte">
+													<p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+													<a href="#">Saiba Mais</a>
+												</div>
+											</div>
+										</div>
+										<div class="card">
+											<div class="face face1">
+												<div class="conte">
+													<span class="icon fa-folder-open"></span>
+													<h3>T2</h3>
+												</div>
+											</div>
+											<div class="face face2">
+												<div class="conte">
+													<p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+													<a href="#">Saiba Mais</a>
+												</div>
+											</div>
+										</div>
+										<div class="card">
+											<div class="face face1">
+												<div class="conte">
+													<span class="icon solid fa-signal"></span>
+													<h3>T3</h3>
+												</div>
+											</div>
+											<div class="face face2">
+												<div class="conte">
+													<p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+													<a href="#">Saiba Mais</a>
+												</div>
+											</div>
+										</div>
+										<div class="card">
+											<div class="face face1">
+												<div class="conte">
+													<span class="icon solid fa-signal"></span>
+													<h3>T3</h3>
+												</div>
+											</div>
+											<div class="face face2">
+												<div class="conte">
+													<p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+													<a href="#">Saiba Mais</a>
+												</div>
+											</div>
+										</div>
+									</div>
+								<!-- <ul class="statistics">
 									<li class="style1">
 										<span class="icon solid fa-people-arrows"></span>
 										<strong>5,120</strong> Clientes Atendidos
 									</li>
+									<div class="hover-ser">									<p class="content">Nam elementum nisl et mi a commodo porttitor. Morbi sit amet nisl eu arcu .</p>
+									</div>
+
 									<li class="style2">
 										<span class="icon fa-folder-open"></span>
 										<strong>8,192</strong> Projetos Finalizados
@@ -112,7 +173,7 @@
 										<strong>1,024</strong> Nullam
 									</li>
 								</ul>
-								<p class="content">Nam elementum nisl et mi a commodo porttitor. Morbi sit amet nisl eu arcu faucibus hendrerit vel a risus. Nam a orci mi, elementum ac arcu sit amet, fermentum pellentesque et purus. Integer maximus varius lorem, sed convallis diam accumsan sed. Etiam porttitor placerat sapien, sed eleifend a enim pulvinar faucibus semper quis ut arcu. Ut non nisl a mollis est efficitur vestibulum. Integer eget purus nec nulla mattis et accumsan ut magna libero. Morbi auctor iaculis porttitor. Sed ut magna ac risus et hendrerit scelerisque. Praesent eleifend lacus in lectus aliquam porta. Cras eu ornare dui curabitur lacinia.</p>
+								<p class="content">Nam elementum nisl et mi a commodo porttitor. Morbi sit amet nisl eu arcu faucibus hendrerit vel a risus. Nam a orci mi, elementum ac arcu sit amet, fermentum pellentesque et purus. Integer maximus varius lorem, sed convallis diam accumsan sed. Etiam porttitor placerat sapien, sed eleifend a enim pulvinar faucibus semper quis ut arcu. Ut non nisl a mollis est efficitur vestibulum. Integer eget purus nec nulla mattis et accumsan ut magna libero. Morbi auctor iaculis porttitor. Sed ut magna ac risus et hendrerit scelerisque. Praesent eleifend lacus in lectus aliquam porta. Cras eu ornare dui curabitur lacinia.</p>-->
 							</section>
 
 						<!-- Get Started -->
