--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
-	<head>
+	<head lang="pt-br">
 		<title>É Aço</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<script src="https://kit.fontawesome.com/yourcode.js" crossorigin="anonymous"></script>
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
@@ -19,8 +21,8 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<span class="logo"><img src="assets/css/images/LogoÉAcoPngFullBranca.png" alt="" /></span>
-						<h1>É Aço</h1>
+						<span class="logo"><img src="assets/css/images/logo-TecAco-Sem-Fundo-Branca.png" alt="" /></span>
+						<h1>Tec Aço</h1>
 						<p>Serviços e Reparos em Caldeiraria e Manutenção Mecânica.</p>
 					</header>
 
@@ -50,7 +52,7 @@
 											<li><a href="#contatos" class="button">Saiba Mais</a></li>
 										</ul>
 									</div>
-									<span class="image"><img src="assets/css/images/male-worker-at-factory.jpg" alt="" /></span>
+									<span class="image"><img src="assets/css/images/SoldagemImagem.png" alt="" /></span>
 								</div>
 							</section>
 
@@ -211,7 +213,7 @@
 							<ul class="icons">
 								<li><a href="https://www.facebook.com/tecbrazrefrigeracaopmoc" target="_blank" class="icon brands fa-facebook-f alt"><span class="label">Facebook</span></a></li>
 								<li><a href="https://www.instagram.com/tecbrazrefrigeracaopmoc/" target="_blank" class="icon brands fa-instagram alt"><span class="label">Instagram</span></a></li>
-								<li><a href="https://api.whatsapp.com/send?phone=5581998989831" target="_blank" class="icon brands fa-whatsapp alt"><span class="label">WhatsApp</span></a></li>
+								<li><a href="https://api.whatsapp.com/send?phone=5581993379708&text=Quero%20Fazer%20um%20Or%C3%A7amento." target="_blank" class="icon brands fa-whatsapp alt"><span class="label">WhatsApp</span></a></li>
 								<li><a href="https://www.youtube.com/channel/UCd1J6MlWJUKnz_11MavvV9w" target="_blank" class="icon brands fa-youtube alt"><span class="label">Youtube</span></a></li>
 							</ul>
 						</section>
