--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
 -->
 <html>
 	<head lang="pt-br">
-		<title>É Aço</title>
+		<title>Tec Aço</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<script src="https://kit.fontawesome.com/yourcode.js" crossorigin="anonymous"></script>
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<link rel="icon" type="imagem/png" href="assets/css/images/logo-TecAco-1.png" />
 	</head>
 	<body class="is-preload">
 
@@ -89,20 +90,19 @@
 							<section id="second" class="main special">
 								<header class="major">
 									<h2>Serviços</h2>
-									<p>Donec imperdiet consequat consequat. Suspendisse feugiat congue<br />
-									posuere. Nulla massa urna, fermentum eget quam aliquet.</p>
+									<p>Veja mais sobre nossos serviços.</p>
 								</header>
 									<div class="conta">
 										<div class="card">
 											<div class="face face1">
 												<div class="conte">
 													<span class="icon solid fa-people-arrows"></span>
-													<h3>T1</h3>
+													<h3>Caldeiraria e Solda</h3>
 												</div>
 											</div>
 											<div class="face face2">
 												<div class="conte">
-													<p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+													<p>Caldeiraria e Solda em mazanino, cobertura metálica, tubulação, etc.</p>
 													<a href="#">Saiba Mais</a>
 												</div>
 											</div>
@@ -111,12 +111,12 @@
 											<div class="face face1">
 												<div class="conte">
 													<span class="icon fa-folder-open"></span>
-													<h3>T2</h3>
+													<h3>manutenção eletromecânica</h3>
 												</div>
 											</div>
 											<div class="face face2">
 												<div class="conte">
-													<p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+													<p>Servicos de manutenção eletromecânica em bombas, pontes rolantes, válvulas, etc.</p>
 													<a href="#">Saiba Mais</a>
 												</div>
 											</div>
@@ -124,32 +124,17 @@
 										<div class="card">
 											<div class="face face1">
 												<div class="conte">
-													<span class="icon solid fa-signal"></span>
-													<h3>T3</h3>
+													<span class="icon solid fa-people-arrows"></span>
+													<h3>Terceirização de mão de obra</h3>
 												</div>
 											</div>
 											<div class="face face2">
 												<div class="conte">
-													<p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+													<p>Oferecemos a locação de nossas equipes de profissionais para o auxílio de serviços terceirizados.</p>
 													<a href="#">Saiba Mais</a>
 												</div>
 											</div>
 										</div>
-										<div class="card">
-											<div class="face face1">
-												<div class="conte">
-													<span class="icon solid fa-signal"></span>
-													<h3>T3</h3>
-												</div>
-											</div>
-											<div class="face face2">
-												<div class="conte">
-													<p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-													<a href="#">Saiba Mais</a>
-												</div>
-											</div>
-										</div>
-									</div>
 								<!-- <ul class="statistics">
 									<li class="style1">
 										<span class="icon solid fa-people-arrows"></span>
@@ -188,6 +173,12 @@
 									<ul class="actions special">
 										<li><a href="https://api.whatsapp.com/send?phone=5581998989831" class="button primary">Fazer Orçamento</a></li>
 									</ul>
+									<ul class="icons">
+										<li><a href="https://www.facebook.com/tecaco.ofc" target="_blank" class="icon brands fa-facebook-f alt"><span class="label">Facebook</span></a></li>
+										<li><a href="https://www.instagram.com/tec_aco.ofc/" target="_blank" class="icon brands fa-instagram alt"><span class="label">Instagram</span></a></li>
+										<li><a href="https://api.whatsapp.com/send?phone=5581993379708&text=Quero%20Fazer%20um%20Or%C3%A7amento." target="_blank" class="icon brands fa-whatsapp alt"><span class="label">WhatsApp</span></a></li>
+										<li><a href="https://www.youtube.com/channel/UCuAPpTS9HvlG_vktjwlRRmw" target="_blank" class="icon brands fa-youtube alt"><span class="label">Youtube</span></a></li>
+									</ul>
 								</footer>
 							</section>
 
@@ -204,20 +195,14 @@
 							<h2>Informações da Empresa</h2>
 							<dl class="alt">
 								<dt>Address</dt>
-								<dd>1234 Somewhere Road &bull; Nashville, TN 00000 &bull; USA</dd>
+								<dd>574 Av. Rui Barbosa, Caétes Velho &bull; Abreu e Lima - PE, 53525-030 &bull; BR</dd>
 								<dt>Telefone</dt>
 								<dd>(81) 98795-7236</dd>
 								<dt>Email</dt>
 								<dd><a href="mailto:tecbrazrefrigeracaopmoc@gmail.com?">tecbrazrefrigeracaopmoc@gmail.com</a></dd>
 							</dl>
-							<ul class="icons">
-								<li><a href="https://www.facebook.com/tecbrazrefrigeracaopmoc" target="_blank" class="icon brands fa-facebook-f alt"><span class="label">Facebook</span></a></li>
-								<li><a href="https://www.instagram.com/tecbrazrefrigeracaopmoc/" target="_blank" class="icon brands fa-instagram alt"><span class="label">Instagram</span></a></li>
-								<li><a href="https://api.whatsapp.com/send?phone=5581993379708&text=Quero%20Fazer%20um%20Or%C3%A7amento." target="_blank" class="icon brands fa-whatsapp alt"><span class="label">WhatsApp</span></a></li>
-								<li><a href="https://www.youtube.com/channel/UCd1J6MlWJUKnz_11MavvV9w" target="_blank" class="icon brands fa-youtube alt"><span class="label">Youtube</span></a></li>
-							</ul>
 						</section>
-						<p class="copyright">&copy; 2021-2022 ÉAço.</p>
+						<p class="copyright">&copy; 2021-2022 TecAço.</p>
 					</footer>
 
 			</div>
