Adicionando area de terceirizacao de mao de obra.

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 							<li><a href="#first">Nossos Processos</a></li>
 							<!-- Agilidade, Qualidade, Profissionalismo -->
 							<li><a href="#second">Serviços</a></li>
+							<li><a href="#third">Terceirização de Serviços</a></li>
 							<li><a href="#cta">Contatos</a></li>
 						</ul>
 					</nav>
@@ -121,46 +122,19 @@
 												</div>
 											</div>
 										</div>
-										<div class="card">
-											<div class="face face1">
-												<div class="conte">
-													<span class="icon solid fa-people-arrows"></span>
-													<h3>Terceirização de mão de obra</h3>
-												</div>
-											</div>
-											<div class="face face2">
-												<div class="conte">
-													<p>Oferecemos a locação de nossas equipes de profissionais para o auxílio de serviços terceirizados.</p>
-													<a href="#">Saiba Mais</a>
-												</div>
-											</div>
-										</div>
-								<!-- <ul class="statistics">
-									<li class="style1">
-										<span class="icon solid fa-people-arrows"></span>
-										<strong>5,120</strong> Clientes Atendidos
-									</li>
-									<div class="hover-ser">									<p class="content">Nam elementum nisl et mi a commodo porttitor. Morbi sit amet nisl eu arcu .</p>
-									</div>
+							</section>
 
-									<li class="style2">
-										<span class="icon fa-folder-open"></span>
-										<strong>8,192</strong> Projetos Finalizados
-									</li>
-									<li class="style3">
-										<span class="icon solid fa-signal"></span>
-										<strong>2,048</strong> Pessoas Impactadas
-									</li>
-									<li class="style4">
-										<span class="icon solid fa-laptop"></span>
-										<strong>4,096</strong> Aliquam
-									</li>
-									<li class="style5">
-										<span class="icon fa-gem"></span>
-										<strong>1,024</strong> Nullam
-									</li>
-								</ul>
-								<p class="content">Nam elementum nisl et mi a commodo porttitor. Morbi sit amet nisl eu arcu faucibus hendrerit vel a risus. Nam a orci mi, elementum ac arcu sit amet, fermentum pellentesque et purus. Integer maximus varius lorem, sed convallis diam accumsan sed. Etiam porttitor placerat sapien, sed eleifend a enim pulvinar faucibus semper quis ut arcu. Ut non nisl a mollis est efficitur vestibulum. Integer eget purus nec nulla mattis et accumsan ut magna libero. Morbi auctor iaculis porttitor. Sed ut magna ac risus et hendrerit scelerisque. Praesent eleifend lacus in lectus aliquam porta. Cras eu ornare dui curabitur lacinia.</p>-->
+							<!--Third Section-->
+							<section id="third" class="main special">
+								<header class="major">
+									<h2>Terceirização de Mão de Obra</h2>
+									<p>Locação de nossas equipes de profissionais para o auxílio de serviços terceirizados.</p>
+								</header>
+								<footer class="major">
+									<ul class="actions special">
+										<li><a href="#contatos" class="button">Saiba Mais</a></li>
+									</ul>
+								</footer>
 							</section>
 
 						<!-- Get Started -->
